<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
android:id="@+id/layout"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
android:orientation="vertical"
xmlns:android="http://schemas.android.com/apk/res/android"
>
<TextView
android:id="@+id/emailLabel"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/email_address"
android:textSize="14sp"
>
</TextView>
<AutoCompleteTextView
android:id="@+id/emailField"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:textSize="18sp"
android:inputType="textNoSuggestions|textFilter"
>
</AutoCompleteTextView>
<TextView
android:id="@+id/passwordLabel"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/password"
android:textSize="14sp"
>
</TextView>
<EditText
android:id="@+id/passwordField"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:textSize="18sp"
android:password="true"
>
</EditText>
<LinearLayout
android:id="@+id/layout"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:orientation="horizontal"
xmlns:android="http://schemas.android.com/apk/res/android"
>
<Button
android:id="@+id/loginButton"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/login"
>
</Button>
<Button
android:id="@+id/configButton"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/config"
>
</Button>
</LinearLayout>
<ProgressBar
android:id="@+id/loginProgressBar"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:visibility="invisible"
>
</ProgressBar>
</LinearLayout>
